<resources>
    <string name="app_name">TMS</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="enter_image_URL">Enter image URL</string>
    <string name="buttonLoad">Download</string>
    <string name="dz_1">DZ-1</string>
    <string name="dz_2">DZ-2</string>
    <string name="dz_3">DZ-3</string>
    <string name="dz_4">DZ-4</string>
    <string name="dz_5">DZ-5</string>
    <string name="dz_6">DZ-6</string>
    <string name="dz_7">DZ-7</string>
    <string name="dz_8">DZ-8</string>
    <string name="dz_9">DZ-9</string>
    <string name="dz_10">DZ-10</string>
    <string name="dz_11">DZ-11</string>
    <string name="dz_12">DZ-12</string>
    <string name="dz_13">DZ-13</string>
    <string name="flag">Flags</string>
    <string name="animation">Animation</string>
    <string name="Spain">Spain</string>
    <string name="Armenia">Armenia</string>
    <string name="Austria">Austria</string>
    <string name="Latvia">Latvia</string>
    <string name="Belgium">Belgium</string>
    <string name="Denmark">Denmark</string>
    <string name="Start">Start</string>
    <string name="Stop">Stop</string>
    <string name="Olives">Olives - 0</string>
    <string name="Grapes">Grapes - 0</string>
    <string name="Peaches">Peaches - 0</string>
    <string name="Greece">Greece :</string>
    <string name="Italy">Italy :</string>
    <string name="CoffeDay">С Днём кофе!!!</string>
    <string name="addSort">add Sort</string>
    <string name="ViewSort">view Sort</string>
    <string name="Add">Add</string>
    <string name="title_activity_main3">MainActivity3</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>


    <string name="Add_sort">Введите сорт</string>
    <string name="Add_price">Введите цену</string>
    <string name="Add_URL">Ссылка на картику</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_animation">MainActivity</string>
    <string name="title_activity_flag">MainActivity</string>
    <string name="title_activity_harvesting">Harvesting</string>
    <string name="title_activity_coffe">Coffe</string>


    <string name="name_str">Name</string>
    <string name="password_str">Password</string>
    <string name="register_str">Register</string>
    <string name="successSign">You are register. Congratulations!!!</string>
    <string name="unsuccessSign">Registration rejected</string>
    <string name="setTitle">Success</string>
    <string name="setTitle2">Unsuccess</string>
    <string name="cancel">OK</string>
    <string name="accept">Sign in</string>

    <string name="timer">Timer</string>
    <string name="start">Start</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="configure">Configure</string>
    <string name="weather_image">weather image</string>
    <string name="enter_city_name">Enter city name</string>
    <string name="nothing">_</string>

    <string name="illumination_value">Illumination value</string>

    <string name="enter_the_number_of_the_fibonacci_number">Enter the number of the fibonacci number</string>
    <string name="enter_number">Enter number</string>
    <string name="calculate">Calculate</string>


</resources>