<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeWork5.FirstFragment">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/coffetime"
        tools:layout_editor_absoluteX="197dp"
        tools:layout_editor_absoluteY="16dp" />

    <Button
        android:id="@+id/addSort"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/style_btn_stroke_black95_white"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:text="@string/addSort"
        android:textSize="20dp"

        app:layout_constraintBottom_toTopOf="@+id/ViewSort"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/ViewSort"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/style_btn_stroke_black95_white"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:text="@string/ViewSort"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/CoffeDay"
        android:layout_width="199dp"
        android:layout_height="110dp"
        android:layout_marginTop="12dp"
        android:lineHeight="55dp"
        android:text="@string/CoffeDay"
        android:textAlignment="center"
        android:textColor="#EB000000"
        android:textSize="45dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>